<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@color/color_slate_dark" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ext_auto_select_language"
            android:textColor="@color/gapfix_text_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/rgLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbArmenian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_armenian"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_english"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbRussian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_russian"
                android:textSize="16sp" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cont"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/gapfix_green"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
